Add Exchange Img

--- a/master/website/templates/home.html
+++ b/master/website/templates/home.html
@@ -23,10 +23,7 @@ home
                 </ol>
             </div>
         </div>
-
         <div class="row">
-
-
             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -62,10 +59,10 @@ home
                     <div class="panel-heading">
                         <h2><strong>환율</strong></h2>
                     </div>
-                    <div class="info-box dark-bg" onclick="location.href='#';">
+                    <div class="info-box dark-bg" onclick="location.href='#';" data-target="#myModal" data-toggle="modal">
                         <i class="fa fa-money"></i>
                         <div class="count">₩{{price}}</div>
-                        <div class="title">1달러 환율</div>
+                        <div class="title">미국USD</div>
                     </div>
                 </div>
                 <!--/.info-box-->
@@ -110,8 +107,22 @@ home
                 </div>
             </div>
             <div class="col-md-1">
-                <button class="btn btn-default btn-lg">예측</button>
+                <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">예측</button>
             </div>
+            <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                            <h4 class="modal-title">Form Tittle</h4>
+                        </div>
+                        <div class="modal-body" align="center">
+                            <img src="{{graph}}" width="500px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="row">
             <div class="col-lg-12">
@@ -124,7 +135,7 @@ home
                             </div>
                             <div class="col-lg-4">
                     <span class="profile-ava pull-right">
-                                        pyh123
+                                        {{user_id}}
                                 </span>
                             </div>
                         </div>
