--- a/master/website/templates/home.html
+++ b/master/website/templates/home.html
@@ -74,7 +74,7 @@ home
                     <div class="panel-heading">
                         <h2><strong>Simulator</strong></h2>
                     </div>
-                    <div class="info-box green-bg" onclick="location.href='{% url 'board:chart3' %}';">
+                    <div class="info-box green-bg" onclick="location.href='{% url 'board:simulate' %}';">
                         <i class="fa fa-desktop"></i>
                         <div class="count">Simulate</div>
                         <div class="title">(고정비, 변동비)</div>
@@ -109,7 +109,7 @@ home
                 </div>
             </div>
             <div class="col-md-1">
-                <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal" id="btn_get_predict" onclick="get_predict()">예측</button>
+                <button class="btn btn-default btn-lg" id="btn_get_predict" onclick="get_predict()">예측</button>
             </div>
             <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
                 <div class="modal-dialog">
