Update AI Prediction Function API.
Update AI Prediction Function API.

--- a/master/website/board/templates/board2/cc_manucost_if.html
+++ b/master/website/board/templates/board2/cc_manucost_if.html
@@ -36,7 +36,6 @@
 
                 var downloadLink = window.document.createElement('a');
                 var contentTypeHeader = xhr.getResponseHeader("Content-Type");
-                alert(contentTypeHeader)
                 downloadLink.href = window.URL.createObjectURL(new Blob([blob], { type: contentTypeHeader }));
                 downloadLink.download = fileName;
                 document.body.appendChild(downloadLink);
@@ -53,49 +52,36 @@
 
       function uploadTemplate()
       {
-          var form = document.getElementById("co_cd")
+          const file = document.getElementById("input_file").files[0];
 
-          if(coCd == '') {
-              alert('법인코드를 입력해주십시오.');
-              document.getElementById("co_cd").focus();
+          if(file == null) {
+              alert('파일를 업로드 해주십시오.');
+              document.getElementById("input_file").focus();
               return false;
           }
 
-          var unitCurSelect = document.querySelector('.cur');
-          var unitCurId = unitCurSelect.options[unitCurSelect.selectedIndex].value;
-
-          var unitCnSelect = document.querySelector('.cn');
-          var unitCnId = unitCnSelect.options[unitCnSelect.selectedIndex].value;
-
-          var payload = {
-              "co_cd": coCd,
-              "co_nm": coNm,
-              "co_shnm": coShnm,
-              "co_rpr": coRpr,
-              "co_type": coType,
-              "co_div": coDiv,
-              "unitcur": unitCurId,
-              "unitcn": unitCnId
-          };
+          const formData = new FormData();
+          formData.append('input_file', file);
 
           xhr = new XMLHttpRequest();
           xhr.onreadystatechange = function() {
               if (xhr.readyState == 4) {
                   if(xhr.status==201)
-                      alert("생성이 완료되었습니다.");
+                      alert("파일 업로드가 완료되었습니다.");
                   location.reload();
               }
               else {
                   if(xhr.status==400) {
-                      var data = xhr.responseText;
-                      var obj = JSON.parse(data);
-
-                      if (obj.detail == "DuplicateCode") {
-                          alert("법인 코드가 이미 존재합니다.");
-                      }
-                      else {
-                          alert("400 Bad Request");
-                      }
+                      alert("Bad Request");
+                      // var data = xhr.responseText;
+                      // var obj = JSON.parse(data);
+                      //
+                      // if (obj.detail == "DuplicateCode") {
+                      //     alert("법인 코드가 이미 존재합니다.");
+                      // }
+                      // else {
+                      //     alert("400 Bad Request");
+                      // }
                   }
               }
           };
@@ -103,8 +89,8 @@
           var strurl = "http://127.0.0.1:8080/rest_api/cc-manu-cost-if";
           xhr.open("POST", strurl, true);
           xhr.setRequestHeader("X-CSRFToken", csrftoken);
-          xhr.setRequestHeader("Content-Type", "application/json");
-          xhr.send(JSON.stringify(payload));
+          xhr.setRequestHeader("Content-Type", "multipart/form-data");
+          xhr.send(formData);
       }
 
 
@@ -128,12 +114,12 @@
             <a class="btn btn-primary btn-sm" href="javascript:void(0);" onclick="downloadTemplate()" title="Bootstrap 3 themes generator">Template 다운로드</a>
         </div>
         <div align="right" style="margin-top:2px">
-            <form method="POST" enctype="multipart/form-data" action="cc_manucost_if/manucostdata_upload">
+            <form id="upload_form" method="POST" enctype="multipart/form-data" action="cc_manucost_if/manucostdata_upload">
                 {% csrf_token %}
                 <table>
                     <tr>
                         <td>
-                            <input type="file" name="ufile" accept=".xlsx" style="width:200px">
+                            <input id="input_file" type="file" name="ufile" accept=".xlsx" style="width:200px">
                         </td>
                         <td>
                             <button type="button" class="btn btn-primary btn-sm" onclick="uploadTemplate()">액셀업로드</button>
